--- a/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
+++ b/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
@@ -48,7 +48,7 @@ model_path <- here("src", "markdown", "mas", "spatiale_modellen")
 dir.create(model_path, showWarnings = FALSE)
 ```
 
-```{r}
+```{r, results="hide"}
 # targets
 targets_store <- here("src", "targets", "mas_steekproef_pilootfase", "_targets")
 
@@ -290,7 +290,7 @@ plot_veldleeuwerik <- new_df %>%
   select(id, x_plot, y_plot, Estimate) %>%
   mutate(across(c(x_plot, y_plot), ~ round(.x, digits = 4)))
 
-plot_veldleeuwerik %>%
+p_veldleeuwerik1 <- plot_veldleeuwerik %>%
   ggplot() +
     geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
             linewidth = 1) +
@@ -302,15 +302,16 @@ plot_veldleeuwerik %>%
                          limits = c(0, 20)) +
     coord_sf(crs = 31370) +
     labs(x = "", y = "", fill = "Aantal broedparen\nper 100 ha",
-         title = "Veldleewerik") +
+         title = "Veldleeuwerik") +
     theme(legend.position = "bottom")
+p_veldleeuwerik1
 ```
 
 We kunnen contourlijnen toevoegen om de figuur begrijpbaarder te maken.
 We voegen contouren toe per 1, 3, 5 ... broedparen per 100 ha.
 
 ```{r}
-p_veldleeuwerik <- plot_veldleeuwerik %>%
+p_veldleeuwerik2 <- plot_veldleeuwerik %>%
   ggplot() +
   geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
           linewidth = 1) +
@@ -328,18 +329,29 @@ p_veldleeuwerik <- plot_veldleeuwerik %>%
       aes(x = x_plot, y = y_plot, z = Estimate, label = after_stat(level)),
       breaks = seq(1, 21, 2), skip = 1,
       label.placer = label_placer_fraction(frac = 0.5, rot_adjuster = 0))
-p_veldleeuwerik
+p_veldleeuwerik2
 ```
 
 ```{r}
 dir.create(here("media", "spatiale_densiteiten"), showWarnings = FALSE)
-ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_dens_ol.png"),
-       p_veldleeuwerik,
+ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_dens_ol1.png"),
+       p_veldleeuwerik1,
        dpi = 300,
        width = 8,
        height = 4)
-ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_dens_ol.pdf"),
-       p_veldleeuwerik,
+ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_dens_ol1.pdf"),
+       p_veldleeuwerik1,
+       dpi = 300,
+       width = 8,
+       height = 4)
+
+ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_dens_ol2.png"),
+       p_veldleeuwerik2,
+       dpi = 300,
+       width = 8,
+       height = 4)
+ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_dens_ol2.pdf"),
+       p_veldleeuwerik2,
        dpi = 300,
        width = 8,
        height = 4)
@@ -401,7 +413,7 @@ plot_gelekwikstaart <- new_df %>%
   select(id, x_plot, y_plot, Estimate) %>%
   mutate(across(c(x_plot, y_plot), ~ round(.x, digits = 4)))
 
-plot_gelekwikstaart %>%
+p_gelekwikstaart1 <- plot_gelekwikstaart %>%
   ggplot() +
     geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
             linewidth = 1) +
@@ -415,13 +427,14 @@ plot_gelekwikstaart %>%
     labs(x = "", y = "", fill = "Aantal broedparen\nper 100 ha",
          title = "Gele kwikstaart") +
     theme(legend.position = "bottom")
+p_gelekwikstaart1
 ```
 
 We kunnen contourlijnen toevoegen om de figuur begrijpbaarder te maken.
 We voegen contouren toe per broedpaar per 100 ha.
 
 ```{r}
-p_gelekwikstaart <- plot_gelekwikstaart %>%
+p_gelekwikstaart2 <- plot_gelekwikstaart %>%
   ggplot() +
   geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
           linewidth = 1) +
@@ -439,17 +452,28 @@ p_gelekwikstaart <- plot_gelekwikstaart %>%
       aes(x = x_plot, y = y_plot, z = Estimate, label = after_stat(level)),
       breaks = seq(1, 16, 1), skip = 1,
       label.placer = label_placer_fraction(frac = 0.5, rot_adjuster = 0))
-p_gelekwikstaart
+p_gelekwikstaart2
 ```
 
 ```{r}
-ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_dens_ol.png"),
-       p_gelekwikstaart,
+ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_dens_ol1.png"),
+       p_gelekwikstaart1,
        dpi = 300,
        width = 8,
        height = 4)
-ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_dens_ol.pdf"),
-       p_gelekwikstaart,
+ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_dens_ol1.pdf"),
+       p_gelekwikstaart1,
+       dpi = 300,
+       width = 8,
+       height = 4)
+
+ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_dens_ol2.png"),
+       p_gelekwikstaart2,
+       dpi = 300,
+       width = 8,
+       height = 4)
+ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_dens_ol2.pdf"),
+       p_gelekwikstaart2,
        dpi = 300,
        width = 8,
        height = 4)
@@ -511,7 +535,7 @@ plot_geelgors <- new_df %>%
   select(id, x_plot, y_plot, Estimate) %>%
   mutate(across(c(x_plot, y_plot), ~ round(.x, digits = 4)))
 
-plot_geelgors %>%
+p_geelgors1 <- plot_geelgors %>%
   ggplot() +
     geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
             linewidth = 1) +
@@ -525,13 +549,14 @@ plot_geelgors %>%
     labs(x = "", y = "", fill = "Aantal broedparen\nper 100 ha",
          title = "Geelgors") +
     theme(legend.position = "bottom")
+p_geelgors1
 ```
 
 We kunnen contourlijnen toevoegen om de figuur begrijpbaarder te maken.
 We voegen contouren toe per broedpaar per 100 ha.
 
 ```{r}
-p_geelgors <- plot_geelgors %>%
+p_geelgors2 <- plot_geelgors %>%
   ggplot() +
   geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
           linewidth = 1) +
@@ -549,17 +574,28 @@ p_geelgors <- plot_geelgors %>%
       aes(x = x_plot, y = y_plot, z = Estimate, label = after_stat(level)),
       breaks = seq(1, 12, 1), skip = 1,
       label.placer = label_placer_fraction(frac = 0.5, rot_adjuster = 0))
-p_geelgors
+p_geelgors2
 ```
 
 ```{r}
-ggsave(here("media", "spatiale_densiteiten", "geelgors_dens_ol.png"),
-       p_geelgors,
+ggsave(here("media", "spatiale_densiteiten", "geelgors_dens_ol1.png"),
+       p_geelgors1,
        dpi = 300,
        width = 8,
        height = 4)
-ggsave(here("media", "spatiale_densiteiten", "geelgors_dens_ol.pdf"),
-       p_geelgors,
+ggsave(here("media", "spatiale_densiteiten", "geelgors_dens_ol1.pdf"),
+       p_geelgors1,
+       dpi = 300,
+       width = 8,
+       height = 4)
+
+ggsave(here("media", "spatiale_densiteiten", "geelgors_dens_ol2.png"),
+       p_geelgors2,
+       dpi = 300,
+       width = 8,
+       height = 4)
+ggsave(here("media", "spatiale_densiteiten", "geelgors_dens_ol2.pdf"),
+       p_geelgors2,
        dpi = 300,
        width = 8,
        height = 4)
