--- a/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
+++ b/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
@@ -257,11 +257,11 @@ steekproefkader_buf <- steekproefkader %>%
   st_buffer(300)
 ```
 
-We maken een grid met cellen van 100x100 m en leggen deze over het steekproefkader (met buffer van 300 m).
+We maken een grid met cellen van 200x200 m en leggen deze over het steekproefkader (met buffer van 300 m).
 Voor de centroïde van elke grid cell maken we een predictie o.b.v. het model.
 
 ```{r, cache=TRUE}
-grid_total <- st_make_grid(steekproefkader_buf, 100) %>%
+grid_total <- st_make_grid(steekproefkader_buf, 200) %>%
   as_tibble() %>%
   rownames_to_column(var = "id") %>%
   st_as_sf(crs = 31370)
@@ -287,7 +287,7 @@ Dit visualiseren we met `geom_raster()` met argument `interpolate = TRUE`.
 ```{r}
 plot_veldleeuwerik <- new_df %>%
   bind_cols(pred_veldleeuwerik) %>%
-  select(id, x_plot, y_plot, Estimate) %>%
+  select(id, x_plot, y_plot, Estimate, Est.Error) %>%
   mutate(across(c(x_plot, y_plot), ~ round(.x, digits = 4)))
 
 p_veldleeuwerik1 <- plot_veldleeuwerik %>%
@@ -332,6 +332,48 @@ p_veldleeuwerik2 <- plot_veldleeuwerik %>%
 p_veldleeuwerik2
 ```
 
+We visualiseren ook de spatiale verdeling van de onzekerheid (standaard error densiteitsschattingen).
+
+```{r}
+p_veldleeuwerik3 <- plot_veldleeuwerik %>%
+  ggplot() +
+    geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
+            linewidth = 1) +
+    geom_raster(aes(x = x_plot, y = y_plot, fill = Est.Error),
+                interpolate = TRUE) +
+    scale_fill_gradientn(colours = c("darkblue", "lightblue", "white",
+                                     "gold", "red"),
+                         breaks = c(0, 2, 4, 6, 8),
+                         limits = c(0, 8)) +
+    coord_sf(crs = 31370) +
+    labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
+         title = "Veldleeuwerik") +
+    theme(legend.position = "bottom")
+p_veldleeuwerik3
+```
+
+```{r}
+p_veldleeuwerik4 <- plot_veldleeuwerik %>%
+  ggplot() +
+    geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
+            linewidth = 1) +
+    geom_raster(aes(x = x_plot, y = y_plot, fill = Est.Error),
+                interpolate = TRUE) +
+    scale_fill_gradientn(colours = c("darkblue", "lightblue", "white",
+                                     "gold", "red"),
+                         breaks = c(0, 2, 4, 6, 8),
+                         limits = c(0, 8)) +
+    coord_sf(crs = 31370) +
+    labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
+         title = "Veldleeuwerik") +
+    theme(legend.position = "bottom") +
+    geom_contour2(
+        aes(x = x_plot, y = y_plot, z = Est.Error, label = after_stat(level)),
+        breaks = seq(1, 8, 1), skip = 1,
+        label.placer = label_placer_fraction(frac = 0.5, rot_adjuster = 0))
+p_veldleeuwerik4
+```
+
 ```{r}
 dir.create(here("media", "spatiale_densiteiten"), showWarnings = FALSE)
 ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_dens_ol1.png"),
@@ -352,6 +394,28 @@ ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_dens_ol2.png"),
        height = 4)
 ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_dens_ol2.pdf"),
        p_veldleeuwerik2,
+       dpi = 300,
+       width = 8,
+       height = 4)
+
+ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_se_ol1.png"),
+       p_veldleeuwerik3,
+       dpi = 300,
+       width = 8,
+       height = 4)
+ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_se_ol1.pdf"),
+       p_veldleeuwerik3,
+       dpi = 300,
+       width = 8,
+       height = 4)
+
+ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_se_ol2.png"),
+       p_veldleeuwerik4,
+       dpi = 300,
+       width = 8,
+       height = 4)
+ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_se_ol2.pdf"),
+       p_veldleeuwerik4,
        dpi = 300,
        width = 8,
        height = 4)
