--- a/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
+++ b/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
@@ -333,19 +333,22 @@ p_veldleeuwerik2 <- plot_veldleeuwerik %>%
 p_veldleeuwerik2
 ```
 
-We visualiseren ook de spatiale verdeling van de onzekerheid (standaard error densiteitsschattingen).
+We visualiseren ook de spatiale verdeling van de onzekerheid.
+Dit doen we aan de hand van de helft van het 95 % credible interval.
+De helft van deze lengte heet de foutmarge.
+De relatieve foutenmarge is dan deze foutmarge gedeeld door de schatting van de densiteit in die grid cell.
 
 ```{r}
 p_veldleeuwerik3 <- plot_veldleeuwerik %>%
   ggplot() +
     geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
             linewidth = 1) +
-    geom_raster(aes(x = x_plot, y = y_plot, fill = Est.Error),
+    geom_raster(aes(x = x_plot, y = y_plot, fill = rel_fout),
                 interpolate = TRUE) +
     scale_fill_gradientn(colours = c("darkblue", "lightblue", "white",
                                      "gold", "red"),
-                         breaks = c(0, 2, 4, 6, 8),
-                         limits = c(0, 8)) +
+                         breaks = c(0, 0.4, 0.6, 0.8, 1.2),
+                         limits = c(0, 1.2)) +
     coord_sf(crs = 31370) +
     labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
          title = "Veldleeuwerik") +
@@ -358,19 +361,19 @@ p_veldleeuwerik4 <- plot_veldleeuwerik %>%
   ggplot() +
     geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
             linewidth = 1) +
-    geom_raster(aes(x = x_plot, y = y_plot, fill = Est.Error),
+    geom_raster(aes(x = x_plot, y = y_plot, fill = rel_fout),
                 interpolate = TRUE) +
     scale_fill_gradientn(colours = c("darkblue", "lightblue", "white",
                                      "gold", "red"),
-                         breaks = c(0, 2, 4, 6, 8),
-                         limits = c(0, 8)) +
+                         breaks = c(0, 0.4, 0.6, 0.8, 1.2),
+                         limits = c(0, 1.2)) +
     coord_sf(crs = 31370) +
     labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
          title = "Veldleeuwerik") +
     theme(legend.position = "bottom") +
     geom_contour2(
-        aes(x = x_plot, y = y_plot, z = Est.Error, label = after_stat(level)),
-        breaks = seq(1, 8, 1), skip = 1,
+        aes(x = x_plot, y = y_plot, z = rel_fout, label = after_stat(level)),
+        breaks = seq(0, 1.2, 0.1), skip = 1,
         label.placer = label_placer_fraction(frac = 0.5, rot_adjuster = 0))
 p_veldleeuwerik4
 ```
@@ -521,19 +524,22 @@ p_gelekwikstaart2 <- plot_gelekwikstaart %>%
 p_gelekwikstaart2
 ```
 
-We visualiseren ook de spatiale verdeling van de onzekerheid (standaard error densiteitsschattingen).
+We visualiseren ook de spatiale verdeling van de onzekerheid.
+Dit doen we aan de hand van de helft van het 95 % credible interval.
+De helft van deze lengte heet de foutmarge.
+De relatieve foutenmarge is dan deze foutmarge gedeeld door de schatting van de densiteit in die grid cell.
 
 ```{r}
 p_gelekwikstaart3 <- plot_gelekwikstaart %>%
   ggplot() +
     geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
             linewidth = 1) +
-    geom_raster(aes(x = x_plot, y = y_plot, fill = Est.Error),
+    geom_raster(aes(x = x_plot, y = y_plot, fill = rel_fout),
                 interpolate = TRUE) +
     scale_fill_gradientn(colours = c("darkblue", "lightblue", "white",
                                      "gold", "red"),
-                         breaks = c(0, 1.5, 3, 4.5, 6),
-                         limits = c(0, 6)) +
+                         breaks = c(0, 0.4, 0.6, 0.8, 1.2),
+                         limits = c(0, 1.2)) +
     coord_sf(crs = 31370) +
     labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
          title = "Gele kwikstaart") +
@@ -546,19 +552,19 @@ p_gelekwikstaart4 <- plot_gelekwikstaart %>%
   ggplot() +
     geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
             linewidth = 1) +
-    geom_raster(aes(x = x_plot, y = y_plot, fill = Est.Error),
+    geom_raster(aes(x = x_plot, y = y_plot, fill = rel_fout),
                 interpolate = TRUE) +
     scale_fill_gradientn(colours = c("darkblue", "lightblue", "white",
                                      "gold", "red"),
-                         breaks = c(0, 1.5, 3, 4.5, 6),
-                         limits = c(0, 6)) +
+                         breaks = c(0, 0.4, 0.6, 0.8, 1.2),
+                         limits = c(0, 1.2)) +
     coord_sf(crs = 31370) +
     labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
          title = "Gele kwikstaart") +
     theme(legend.position = "bottom") +
     geom_contour2(
-        aes(x = x_plot, y = y_plot, z = Est.Error, label = after_stat(level)),
-        breaks = seq(1, 6, 1), skip = 1,
+        aes(x = x_plot, y = y_plot, z = rel_fout, label = after_stat(level)),
+        breaks = seq(0, 1.2, 0.1), skip = 1,
         label.placer = label_placer_fraction(frac = 0.5, rot_adjuster = 0))
 p_gelekwikstaart4
 ```
@@ -709,19 +715,22 @@ p_geelgors2 <- plot_geelgors %>%
 p_geelgors2
 ```
 
-We visualiseren ook de spatiale verdeling van de onzekerheid (standaard error densiteitsschattingen).
+We visualiseren ook de spatiale verdeling van de onzekerheid.
+Dit doen we aan de hand van de helft van het 95 % credible interval.
+De helft van deze lengte heet de foutmarge.
+De relatieve foutenmarge is dan deze foutmarge gedeeld door de schatting van de densiteit in die grid cell.
 
 ```{r}
 p_geelgors3 <- plot_geelgors %>%
   ggplot() +
     geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
             linewidth = 1) +
-    geom_raster(aes(x = x_plot, y = y_plot, fill = Est.Error),
+    geom_raster(aes(x = x_plot, y = y_plot, fill = rel_fout),
                 interpolate = TRUE) +
     scale_fill_gradientn(colours = c("darkblue", "lightblue", "white",
                                      "gold", "red"),
-                         breaks = c(0, 2, 4, 6, 8),
-                         limits = c(0, 8)) +
+                         breaks = c(0, 0.4, 0.8, 1.2, 1.6),
+                         limits = c(0, 1.6)) +
     coord_sf(crs = 31370) +
     labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
          title = "Geelgors") +
@@ -734,19 +743,19 @@ p_geelgors4 <- plot_geelgors %>%
   ggplot() +
     geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
             linewidth = 1) +
-    geom_raster(aes(x = x_plot, y = y_plot, fill = Est.Error),
+    geom_raster(aes(x = x_plot, y = y_plot, fill = rel_fout),
                 interpolate = TRUE) +
     scale_fill_gradientn(colours = c("darkblue", "lightblue", "white",
                                      "gold", "red"),
-                         breaks = c(0, 2, 4, 6, 8),
-                         limits = c(0, 8)) +
+                         breaks = c(0, 0.4, 0.8, 1.2, 1.6),
+                         limits = c(0, 1.6)) +
     coord_sf(crs = 31370) +
     labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
          title = "Geelgors") +
     theme(legend.position = "bottom") +
     geom_contour2(
-        aes(x = x_plot, y = y_plot, z = Est.Error, label = after_stat(level)),
-        breaks = seq(1, 8, 1), skip = 1,
+        aes(x = x_plot, y = y_plot, z = rel_fout, label = after_stat(level)),
+        breaks = seq(0, 1.6, 0.2), skip = 1,
         label.placer = label_placer_fraction(frac = 0.5, rot_adjuster = 0))
 p_geelgors4
 ```
@@ -806,7 +815,7 @@ We maken een kaart voor Veldleeuwerik.
 ```{r}
 grid_veldleeuwerik <- grid %>%
   bind_cols(pred_veldleeuwerik) %>%
-  select(id, Estimate, Est.Error, geometry) %>%
+  select(id, Estimate, rel_fout, geometry) %>%
   mutate(Estimate = round(Estimate, 3)) %>%
   st_as_sf(sf_column_name = "geometry", crs = 31370)
 ```
@@ -821,7 +830,7 @@ mapview(grid_veldleeuwerik,
 
 ```{r}
 mapview(grid_veldleeuwerik,
-        zcol = "Est.Error",
+        zcol = "rel_fout",
         alpha = 0,
         layer.name = "SE aantal broedparen per 100 ha",
         map.types = "OpenStreetMap")
@@ -832,7 +841,7 @@ We maken een kaart voor Gele kwikstaart.
 ```{r}
 grid_gelekwikstaart <- grid %>%
   bind_cols(pred_gelekwikstaart) %>%
-  select(id, Estimate, Est.Error, geometry) %>%
+  select(id, Estimate, rel_fout, geometry) %>%
   mutate(Estimate = round(Estimate, 3)) %>%
   st_as_sf(sf_column_name = "geometry", crs = 31370)
 ```
@@ -847,7 +856,7 @@ mapview(grid_gelekwikstaart,
 
 ```{r}
 mapview(grid_gelekwikstaart,
-        zcol = "Est.Error",
+        zcol = "rel_fout",
         alpha = 0,
         layer.name = "SE aantal broedparen per 100 ha",
         map.types = "OpenStreetMap")
@@ -858,7 +867,7 @@ We maken een kaart voor Geelgors.
 ```{r}
 grid_geelgors <- grid %>%
   bind_cols(pred_geelgors) %>%
-  select(id, Estimate, Est.Error, geometry) %>%
+  select(id, Estimate, rel_fout, geometry) %>%
   mutate(Estimate = round(Estimate, 3)) %>%
   st_as_sf(sf_column_name = "geometry", crs = 31370)
 ```
@@ -873,7 +882,7 @@ mapview(grid_geelgors,
 
 ```{r}
 mapview(grid_geelgors,
-        zcol = "Est.Error",
+        zcol = "rel_fout",
         alpha = 0,
         layer.name = "SE aantal broedparen per 100 ha",
         map.types = "OpenStreetMap")
