--- a/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
+++ b/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
@@ -350,7 +350,7 @@ p_veldleeuwerik3 <- plot_veldleeuwerik %>%
                          breaks = c(0, 0.4, 0.6, 0.8, 1.2),
                          limits = c(0, 1.2)) +
     coord_sf(crs = 31370) +
-    labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
+    labs(x = "", y = "", fill = "Rel. foutenmarge aantal\nbroedparen per 100 ha",
          title = "Veldleeuwerik") +
     theme(legend.position = "bottom")
 p_veldleeuwerik3
@@ -368,7 +368,7 @@ p_veldleeuwerik4 <- plot_veldleeuwerik %>%
                          breaks = c(0, 0.4, 0.6, 0.8, 1.2),
                          limits = c(0, 1.2)) +
     coord_sf(crs = 31370) +
-    labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
+    labs(x = "", y = "", fill = "Rel. foutenmarge aantal\nbroedparen per 100 ha",
          title = "Veldleeuwerik") +
     theme(legend.position = "bottom") +
     geom_contour2(
@@ -402,23 +402,23 @@ ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_dens_ol2.pdf"),
        width = 8,
        height = 4)
 
-ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_se_ol1.png"),
+ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_fout_ol1.png"),
        p_veldleeuwerik3,
        dpi = 300,
        width = 8,
        height = 4)
-ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_se_ol1.pdf"),
+ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_fout_ol1.pdf"),
        p_veldleeuwerik3,
        dpi = 300,
        width = 8,
        height = 4)
 
-ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_se_ol2.png"),
+ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_fout_ol2.png"),
        p_veldleeuwerik4,
        dpi = 300,
        width = 8,
        height = 4)
-ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_se_ol2.pdf"),
+ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_fout_ol2.pdf"),
        p_veldleeuwerik4,
        dpi = 300,
        width = 8,
@@ -541,7 +541,7 @@ p_gelekwikstaart3 <- plot_gelekwikstaart %>%
                          breaks = c(0, 0.4, 0.6, 0.8, 1.2),
                          limits = c(0, 1.2)) +
     coord_sf(crs = 31370) +
-    labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
+    labs(x = "", y = "", fill = "Rel. foutenmarge aantal\nbroedparen per 100 ha",
          title = "Gele kwikstaart") +
     theme(legend.position = "bottom")
 p_gelekwikstaart3
@@ -559,7 +559,7 @@ p_gelekwikstaart4 <- plot_gelekwikstaart %>%
                          breaks = c(0, 0.4, 0.6, 0.8, 1.2),
                          limits = c(0, 1.2)) +
     coord_sf(crs = 31370) +
-    labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
+    labs(x = "", y = "", fill = "Rel. foutenmarge aantal\nbroedparen per 100 ha",
          title = "Gele kwikstaart") +
     theme(legend.position = "bottom") +
     geom_contour2(
@@ -593,23 +593,23 @@ ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_dens_ol2.pdf"),
        width = 8,
        height = 4)
 
-ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_se_ol1.png"),
+ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_fout_ol1.png"),
        p_gelekwikstaart3,
        dpi = 300,
        width = 8,
        height = 4)
-ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_se_ol1.pdf"),
+ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_fout_ol1.pdf"),
        p_gelekwikstaart3,
        dpi = 300,
        width = 8,
        height = 4)
 
-ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_se_ol2.png"),
+ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_fout_ol2.png"),
        p_gelekwikstaart4,
        dpi = 300,
        width = 8,
        height = 4)
-ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_se_ol2.pdf"),
+ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_fout_ol2.pdf"),
        p_gelekwikstaart4,
        dpi = 300,
        width = 8,
@@ -732,7 +732,7 @@ p_geelgors3 <- plot_geelgors %>%
                          breaks = c(0, 0.4, 0.8, 1.2, 1.6),
                          limits = c(0, 1.6)) +
     coord_sf(crs = 31370) +
-    labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
+    labs(x = "", y = "", fill = "Rel. foutenmarge aantal\nbroedparen per 100 ha",
          title = "Geelgors") +
     theme(legend.position = "bottom")
 p_geelgors3
@@ -750,7 +750,7 @@ p_geelgors4 <- plot_geelgors %>%
                          breaks = c(0, 0.4, 0.8, 1.2, 1.6),
                          limits = c(0, 1.6)) +
     coord_sf(crs = 31370) +
-    labs(x = "", y = "", fill = "Standaard error aantal\nbroedparen per 100 ha",
+    labs(x = "", y = "", fill = "Rel. foutenmarge aantal\nbroedparen per 100 ha",
          title = "Geelgors") +
     theme(legend.position = "bottom") +
     geom_contour2(
@@ -784,23 +784,23 @@ ggsave(here("media", "spatiale_densiteiten", "geelgors_dens_ol2.pdf"),
        width = 8,
        height = 4)
 
-ggsave(here("media", "spatiale_densiteiten", "geelgors_se_ol1.png"),
+ggsave(here("media", "spatiale_densiteiten", "geelgors_fout_ol1.png"),
        p_geelgors3,
        dpi = 300,
        width = 8,
        height = 4)
-ggsave(here("media", "spatiale_densiteiten", "geelgors_se_ol1.pdf"),
+ggsave(here("media", "spatiale_densiteiten", "geelgors_fout_ol1.pdf"),
        p_geelgors3,
        dpi = 300,
        width = 8,
        height = 4)
 
-ggsave(here("media", "spatiale_densiteiten", "geelgors_se_ol2.png"),
+ggsave(here("media", "spatiale_densiteiten", "geelgors_fout_ol2.png"),
        p_geelgors4,
        dpi = 300,
        width = 8,
        height = 4)
-ggsave(here("media", "spatiale_densiteiten", "geelgors_se_ol2.pdf"),
+ggsave(here("media", "spatiale_densiteiten", "geelgors_fout_ol2.pdf"),
        p_geelgors4,
        dpi = 300,
        width = 8,
@@ -815,8 +815,9 @@ We maken een kaart voor Veldleeuwerik.
 ```{r}
 grid_veldleeuwerik <- grid %>%
   bind_cols(pred_veldleeuwerik) %>%
-  select(id, Estimate, rel_fout, geometry) %>%
-  mutate(Estimate = round(Estimate, 3)) %>%
+  select(id, Estimate, Q2.5, Q97.5, geometry) %>%
+  mutate(Estimate = round(Estimate, 3),
+         rel_fout = (Q97.5 - Q2.5) / (2 * Estimate)) %>%
   st_as_sf(sf_column_name = "geometry", crs = 31370)
 ```
 
@@ -832,7 +833,7 @@ mapview(grid_veldleeuwerik,
 mapview(grid_veldleeuwerik,
         zcol = "rel_fout",
         alpha = 0,
-        layer.name = "SE aantal broedparen per 100 ha",
+        layer.name = "Rel. foutenmarge aantal broedparen per 100 ha",
         map.types = "OpenStreetMap")
 ```
 
@@ -858,7 +859,7 @@ mapview(grid_gelekwikstaart,
 mapview(grid_gelekwikstaart,
         zcol = "rel_fout",
         alpha = 0,
-        layer.name = "SE aantal broedparen per 100 ha",
+        layer.name = "Rel. foutenmarge aantal broedparen per 100 ha",
         map.types = "OpenStreetMap")
 ```
 
@@ -884,6 +885,6 @@ mapview(grid_geelgors,
 mapview(grid_geelgors,
         zcol = "rel_fout",
         alpha = 0,
-        layer.name = "SE aantal broedparen per 100 ha",
+        layer.name = "Rel. foutenmarge aantal broedparen per 100 ha",
         map.types = "OpenStreetMap")
 ```
